<resources>

    <string name="app_name">FAR APP</string>
    <string name="navi_chair">Arm Chair</string>
    <string name="navi_bed">Bed</string>
    <string name="navi_desk">Desk</string>
    <string name="navi_items">Items Selected</string>
    <string name="navi_profile">Account</string>
    <string name="navi_login">login</string>
    <string name="navi_logout">logout</string>
    <string name="navi_story">About</string>
    <string name="short_couch">Short Couch</string>
    <string name="profile">Profile</string>
    <string name="clear">Clear</string>
    <string name="tv_table">Tv table</string>
    <string name="long_couch">Long Couch</string>
    <string name="fluffy_chair">Fluffy chair</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="_3_d_objects">3-D objects</string>
    <string name="our_project_is_an_app_that_allows_users_to_place_3d_furniture_models_in_ar_to_see_how_they_would_look_like_alongside_their_existing_furniture_and_decor_users_will_be_able_to_resize_and_reposition_the_furniture_objects_as_needed_this_will_help_people_who_would_like_to_create_their_own_design_and_see_if_the_new_furniture_will_fit_in_their_current_d_cor_without_the_need_of_testing_it_with_the_real_furniture_other_options_and_universal_modifiers_might_be_added_if_necessary">Our project is an app that allows users to place 3D furniture models in AR to see how they would look like alongside their existing furniture and decor. Users will be able to resize, and reposition the furniture objects as needed. This will help people who would like to create their own design and see if the new furniture will fit in their current décor without the need of testing it with the real furniture. Other options and universal modifiers might be added if necessary.</string>
    <string name="title_activity_navi">navi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="email">Email</string>
    <string name="login_sign_up">Login/Sign up</string>
    <string name="virtual_furniture">Virtual Furniture</string>
    <string name="clear_last_item">Clear last item</string>


</resources>
